# dopplerpy

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: build_pages.yml  pr_validation.yml
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: __version__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build_pages.yml  pr_validation.yml
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: __init__.py  __version__.py
